--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" charset="utf-8"></script>
-    <title>Memory Game</title>
+    <title>Memory Game.</title>
 </head>
 <body>
-    <h3>Score: <span id="result"></span></h3>
-
-    <div class="grid">
-
+    <div id="text-zone">
+        <h1>Memory Game</h1>
+        <div id="game-infos">
+        <div>Score: <span id="result"></span></div>
+        <span id="message"></span>
+        </div>
+    </div>
+    <div id="game-zone">
+        <div class="grid"></div>
     </div>
 </body>
 </html>
